tests/snapshots/snapshot_tests__random_board_snapshot_11.snap
---
source: tests/snapshot_tests.rs
assertion_line: 45
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : Golden Baron Rivendare
  ? idx: 2
    version: 1
  : Saltscale Honcho
  ? idx: 3
    version: 1
  : Golden Glyph Guardian
  ? idx: 4
    version: 1
  : Mini-Myrmidon
  ? idx: 5
    version: 1
  : Golden Roadboar
  ? idx: 6
    version: 1
  : Sanguine Champion
  ? idx: 7
    version: 1
  : "Golden Spawn of N'Zoth"
  ? idx: 8
    version: 1
  : Blade Collector
  ? idx: 9
    version: 1
  : Golden Niuzao
  ? idx: 10
    version: 1
  : Golden Jelly Belly
  ? idx: 11
    version: 1
  : Menagerie Mug
  ? idx: 12
    version: 1
  : Stormscale Siren
  ? idx: 13
    version: 1
  : Briarback Bookie
  ? idx: 14
    version: 1
  : Golden Monstrous Macaw
- - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 3
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 2
      source:
        idx: 11
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 2
              version: 1
            defender:
              idx: 11
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 2
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 6
      source:
        idx: 10
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 1
              version: 1
            defender:
              idx: 10
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 1
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 4
      source:
        idx: 3
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 4
              version: 1
            defender:
              idx: 3
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 4
      source:
        idx: 3
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 6
      source:
        idx: 12
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 3
              version: 1
            defender:
              idx: 12
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 18
      source:
        idx: 6
        version: 1
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 2
      source:
        idx: 1
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 6
              version: 1
            defender:
              idx: 1
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - ActivateEffect:
      generic_associated_event_handler:
        AuraUpdate:
          event: ~
          ass_handler:
            minion:
              idx: 1
              version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 1
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 6
      source:
        idx: 12
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 5
              version: 1
            defender:
              idx: 12
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - ActivateEffect:
      generic_associated_event_handler:
        Attack:
          event:
            attacker:
              idx: 8
              version: 1
            defender:
              idx: 5
              version: 1
            is_outer_phase: true
          ass_handler:
            minion:
              idx: 8
              version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - Death:
      minion:
        idx: 5
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 5
        version: 1
  - Death:
      minion:
        idx: 3
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 3
        version: 1
  - AfterAttack:
      attacker:
        idx: 8
        version: 1
      defender:
        idx: 5
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 4
      source:
        idx: 7
        version: 1
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 6
      source:
        idx: 10
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 7
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 6
      source:
        idx: 10
        version: 1
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 12
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - AfterAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 12
      source:
        idx: 9
        version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 18
      source:
        idx: 6
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 6
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 10
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 3
      source:
        idx: 13
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 13
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 13
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - End: TopWin

